--- a/Projeto Cordel/style.css
+++ b/Projeto Cordel/style.css
@@ -1,11 +1,21 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
 
 }
+:root {
+    --font1: Verdana, Gerneva, Tahoma, sans-serif;
+    --font02:'Passion One', cursive;
+    --font03: 'Sriracha', cursive;
+}
 html, body {
+    font-family: var(--font1);
     min-height: 100vh;
     background-color: darkgray;
 }
@@ -16,6 +26,8 @@ header {
     text-align: center;
 }
 header > h1 {
+    font-family: var(--font02);
+    font-size: 10vw;
     padding-top: 50px;
     font-variant: small-caps;
 }
@@ -35,22 +47,48 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font03);
+    font-size: 3vw;
+}
+section > p {
+    padding-bottom: 0em;
 }
 section.normal {
     background-color: white;
-    padding-bottom: 10vh;
+    color: black;
+}
+section > p {
+    padding-bottom: 2em;
 }
 section.imagem {
     background-color: rgba(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.26);
+    background-size: cover;
+    background-attachment: fixed;
 }
-section.imagem > p {
-    width: 400px;
-    background-color: black;
-    
+section.imagem > p  {
+    background-color: rgba(0, 0, 0, 0.425);
+    display: inline-block;
+    padding: 5px;
+    text-shadow: 1px 1px 1px black;
+}
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+ 
+   
+
+}
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+   
 }
 
+
 footer {
+    font-size: 2vw;
     background-color: black;
     color: white;
     text-align: center;
